# GestureClassifier

GestureClassification/: AbstractGestureClassifier.h  DtwPsClassifier.cpp  DtwPsClassifier.h  RepClassifier.cpp  RepClassifier.h  Template.cpp  Template.h  main.cpp
OSCGestureClassifier/: CMakeLists.txt  GestureClassifier.cbp  OSCGestureClassifier.cpp  main.cpp
YIN/: YIN.cpp
examples/pd/: OSCGestureClassifierPd.pd
examples/supercollider/: oscmessages.scd
examples/supercollider/class/: OSCGestureClassifier.sc
lbimproved/: dtw.h
utils/: AlphaFilter.cpp  AlphaFilter.h  HistogramBuffer.cpp  HistogramBuffer.h  m_pd.h  utils.cpp  utils.h
